# AtkCocoa

./: .gitignore  Makefile  Makefile.am  README  ThirdPartyNotices.txt  autogen.sh  configure.ac  license.txt
AtkCocoa/: ACAccessibilityCellElement.c  ACAccessibilityComboBoxElement.c  ACAccessibilityComboCellElement.m  ACAccessibilityElement.c  ACAccessibilityExpanderElement.m  ACAccessibilityMenuItemElement.c  ACAccessibilityNotebookElement.c  ACAccessibilityNotebookTabElement.c  ACAccessibilityOutlineElement.c  ACAccessibilityPopupMenuElement.m  ACAccessibilitySpinnerElement.c  ACAccessibilityTableHeaderElement.m  ACAccessibilityTextFieldElement.c  ACAccessibilityTextViewElement.c  ACAccessibilityToggleButtonElement.m  ACAccessibilityTreeCellElement.c  ACAccessibilityTreeColumnElement.c  ACAccessibilityTreeColumnHeaderElement.c  ACAccessibilityTreeRowElement.c  ACAccessibiltyBooleanCellElement.m  NSAccessibilityElement+AtkCocoa.c  NSArray+AtkCocoa.m  accombocell.c  acelement.c  acmarshal.c  acutils.c  gail.c  gailadjustment.c  gailarrow.c  gailbooleancell.c  gailbox.c  gailbutton.c  gailcalendar.c  gailcell.c  gailcellparent.c  gailcheckmenuitem.c  gailchecksubmenuitem.c  gailcombo.c  gailcombobox.c  gailcontainer.c  (+43 more)
AtkCocoa.xcodeproj/: project.pbxproj
AtkCocoa.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
AtkCocoa/atk-cocoa/: ACAccessibilityCellElement.h  ACAccessibilityComboBoxElement.h  ACAccessibilityComboCellElement.h  ACAccessibilityElement.h  ACAccessibilityExpanderElement.h  ACAccessibilityMenuItemElement.h  ACAccessibilityNotebookElement.h  ACAccessibilityOutlineElement.h  ACAccessibilityPopupMenuElement.h  ACAccessibilitySpinnerElement.h  ACAccessibilityTableHeaderElement.h  ACAccessibilityTextFieldElement.h  ACAccessibilityTextViewElement.h  ACAccessibilityToggleButtonElement.h  ACAccessibilityTreeCellElement.h  ACAccessibilityTreeColumnElement.h  ACAccessibilityTreeColumnHeaderElement.h  ACAccessibilityTreeRowElement.h  ACAccessibiltyBooleanCellElement.h  NSAccessibilityElement+AtkCocoa.h  NSArray+AtkCocoa.h  accombocell.h  acelement.h  acmarshal.h  gail-private-macros.h  gail.h  gailcell.h  gailcombo.h  gailitem.h  gaillabel.h  gaillist.h  gailmenuitem.h  gailnotebookpage.h  gailnsview.h  gailoptionmenu.h  gailpixmap.h  gailprogressbar.h  gailtreeview.h  gailwidget.h  gailwindow.h
atk-cocoa/: .gitignore  ACAccessibilityCellElement.c  ACAccessibilityCellElement.h  ACAccessibilityComboBoxElement.c  ACAccessibilityComboBoxElement.h  ACAccessibilityElement.c  ACAccessibilityElement.h  ACAccessibilityMenuItemElement.c  ACAccessibilityMenuItemElement.h  ACAccessibilityNotebookElement.c  ACAccessibilityNotebookTabElement.c  ACAccessibilityNotebookTabElement.h  ACAccessibilityOutlineElement.c  ACAccessibilityOutlineElement.h  ACAccessibilitySpinnerElement.c  ACAccessibilitySpinnerElement.h  ACAccessibilityTextFieldElement.c  ACAccessibilityTextFieldElement.h  ACAccessibilityTextViewElement.c  ACAccessibilityTextViewElement.h  ACAccessibilityTreeCellElement.c  ACAccessibilityTreeCellElement.h  ACAccessibilityTreeColumnElement.c  ACAccessibilityTreeColumnElement.h  ACAccessibilityTreeRowElement.c  ACAccessibilityTreeRowElement.h  Makefile.am  NSAccessibilityElement+AtkCocoa.c  NSAccessibilityElement+AtkCocoa.h  acdebug.h  acelement.c  acelement.h  acutils.c  acutils.h  gail.c  gail.h  gailarrow.h  gailbooleancell.h  gailbox.c  gailbox.h  (+70 more)
atk-cocoa/libatkcocoa-util/: Makefile.am
